<?xml version="1.0" encoding="utf-8"?>
<nav_host_fragment_content_main xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myactivity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_retail_login"
            app:destination="@id/navigation_retail_login" />
        <action
            android:id="@+id/action_home_to_wholesale_login"
            app:destination="@id/navigation_wholesale_login" />
        <action
            android:id="@+id/action_home_to_sign"
            app:destination="@id/navigation_sign" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myactivity.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myactivity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.myactivity.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_retail_login"
        android:name="com.example.myactivity.ui.login.RetailLoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_retail_login">
        <action
            android:id="@+id/action_retail_login_to_order"
            app:destination="@id/navigation_order" />
    </fragment>

    <fragment
        android:id="@+id/navigation_wholesale_login"
        android:name="com.example.myactivity.ui.login.WholesaleLoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_wholesale_login">
        <action
            android:id="@+id/action_wholesale_login_to_order"
            app:destination="@id/navigation_order" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.myactivity.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_sign"
        android:name="com.example.myactivity.ui.login.SignFragment"
        android:label="@string/title_sign"
        tools:layout="@layout/fragment_sign">
        <action
            android:id="@+id/action_sign_to_retail_login"
            app:destination="@id/navigation_retail_login" />
        <action
            android:id="@+id/action_sign_to_wholesale_login"
            app:destination="@id/navigation_wholesale_login" />
    </fragment>

</nav_host_fragment_content_main>
